fix: Fix too much height

--- a/css/home/skills.css
+++ b/css/home/skills.css
@@ -7,7 +7,7 @@
     background: #29292926;
     position: relative;
     max-width: 100%;
-    min-height: 80vh;
+    min-height: 40vh;
     min-width: 50%;
 }
 
